--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="language"> <b>ENG</b> <a>/</a><a href="ua.html" target="_self">UA</a></div>
         <div class="parent">
             <div class="child_left">
-                <p><img src=img/1635003703395.jpg alt="my photo">
+                <p><img src=img\1635003703395.jpg alt="my photo">
                 </p>
             </div>
 
@@ -79,6 +79,10 @@
                 <p>I am going to grow in quality assurance and believe that my experience, skills and knowledge will be
                     useful for your company.</p>
                 <p>Мy goal is to get a position in a company where I can grow and develop as a specialist.</p>
+                <hr>
+                <h2>EDUCATION</h2>
+                <p>2023 - Software testing course by Vadim Ksendzov;</p>
+                <p>2015 - 2020 - National Pedagogical Dragomanov University, Master (History);</p>
             </div>
 
 
@@ -121,7 +125,7 @@
 
 
 
-            <div class="child_left">
+            <div class="child_mid">
                 <h2>My projects</h2>
                 <p><a href="https://yvyn.github.io/summary/"><i></i> Website</a></p>
                 <p><a href="https://github.com/Yvyn"> Git
@@ -130,11 +134,7 @@
                         documentation</a></p>
             </div>
 
-            <div class="child_right">
-                <h2>EDUCATION</h2>
-                <p>2023 - Software testing course by Vadim Ksendzov;</p>
-                <p>2015 - 2020 - National Pedagogical Dragomanov University, Master (History);</p>
-            </div>
+
 
         </div>
     </div>
