--- a/ua.html
+++ b/ua.html
@@ -79,6 +79,10 @@
                     будуть корисними для вашої компанії. </p>
                 <p>Моя мета – отримати посаду в компанії, де я можу рости та розвиватися як спеціаліст.
                 </p>
+                <hr>
+                <h2>ОСВІТА</h2>
+                <p>2023 - Курс тестування програмного забезпечення Вадима Ксендзова;</p>
+                <p>2015 - 2020 - Національний педагогічний університет імені М.П.Драгоманова, магістр (історія);</p>
             </div>
 
             <div class="child_right">
@@ -118,7 +122,7 @@
             </div>
 
 
-            <div class="child_left">
+            <div class="child_mid">
                 <h2>МОЇ ПРОЕКТИ</h2>
                 <p><a href="https://yvyn.github.io/summary/"><i></i> Вебсайт</a></p>
                 <p><a href="https://github.com/Yvyn"> Git
@@ -127,11 +131,7 @@
                         Тестова документація</a></p>
             </div>
 
-            <div class="child_right">
-                <h2>ОСВІТА</h2>
-                <p>2023 - Курс тестування програмного забезпечення Вадима Ксендзова;</p>
-                <p>2015 - 2020 - Національний педагогічний університет імені М.П.Драгоманова, магістр (історія);</p>
-            </div>
+
 
         </div>
     </div>
