--- a/index.html
+++ b/index.html
@@ -121,24 +121,26 @@
             </div>
 
 
-
-
-
-
             <div class="child_mid">
                 <h2>My projects</h2>
-                <p><a href="https://yvyn.github.io/summary/"><i></i> Website</a></p>
-                <p><a href="https://github.com/Yvyn"> Git
-                        Hub</a></p>
-                <p><a href="https://drive.google.com/drive/folders/15r9fUWw35QlKpbR_br5Zei8pkg8ycjsK?usp=sharing"> Test
-                        documentation</a></p>
+                <div>
+                    <div>
+                        <a class="links" href="https://yvyn.github.io/summary/">Website</a> <a class="links"
+                            href="https://github.com/Yvyn">GitHub</a> <a class="links"
+                            href="https://drive.google.com/drive/folders/15r9fUWw35QlKpbR_br5Zei8pkg8ycjsK?usp=sharing">Test
+                            documentation</a>
+                    </div>
+
+
+                </div>
+
+
+
+
+
             </div>
-
-
-
         </div>
-    </div>
-    <script src="https://kit.fontawesome.com/c920778ff1.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/c920778ff1.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
