--- a/ua.html
+++ b/ua.html
@@ -64,6 +64,7 @@
                     <li><b>API Testing Tools:</b> - Postman, Swagger;</li>
                     <li><b>Tools:</b> - Devtools, VS code;</li>
                     <li><b>English Proficiency:</b> Intermediate;</li>
+                    <hr>
                 </ul>
             </div>
 
@@ -124,18 +125,17 @@
 
             <div class="child_mid">
                 <h2>МОЇ ПРОЕКТИ</h2>
-                <p><a href="https://yvyn.github.io/summary/"><i></i> Вебсайт</a></p>
-                <p><a href="https://github.com/Yvyn"> Git
-                        Hub</a></p>
-                <p><a href="https://drive.google.com/drive/folders/15r9fUWw35QlKpbR_br5Zei8pkg8ycjsK?usp=sharing">
-                        Тестова документація</a></p>
-            </div>
+                <div>
+                    <div>
+                        <a class="links" href="https://yvyn.github.io/summary/">Вебсайт</a> <a class="links"
+                            href="https://github.com/Yvyn">GitHub</a> <a class="links"
+                            href="https://drive.google.com/drive/folders/15r9fUWw35QlKpbR_br5Zei8pkg8ycjsK?usp=sharing">Тестова
+                            документація</a>
+                    </div>
 
 
+                </div>
 
-        </div>
-    </div>
-    <script src="https://kit.fontawesome.com/c920778ff1.js" crossorigin="anonymous"></script>
-</body>
+
 
 </html>
