--- a/ua.html
+++ b/ua.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Винокуров Юрій - QA Engineer</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <base target="_blank">
@@ -20,6 +21,7 @@
             <div class="child_left">
                 <p><img src=img/1635003703395.jpg alt="my photo">
                 </p>
+                <hr>
             </div>
 
             <div class="child_right">
