--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
 
             <div class="child_left">
                 <h2> Additional Information </h2>
-                <p>I am interested in IT and web technologies.</p>
-                <p>I am a hardworking person. I constantly read professional literature, watch educational videos and
-                    take online courses. I am interested in music, literature, and games. I am constantly learning
-                    something new and improving my skills.
+                <p>I am a QA engineer with over a year of experience, passionate about IT, web, and mobile technologies.
+                </p>
+                <p>I am a dedicated individual who is constantly learning new things, refining my skills, and applying
+                    them in practice.
+
 
                 </p>
-                <p>I am going to grow in quality assurance and believe that my experience, skills and knowledge will be
-                    useful for your company.</p>
-                <p>Мy goal is to get a position in a company where I can grow and develop as a specialist.</p>
+                <p>I believe that my experience in quality assurance will be valuable to your company..</p>
+                <p>My goal is to secure a position at a company where I can continue my professional development.</p>
                 <hr>
                 <h2>EDUCATION</h2>
                 <p>2023 - Software testing course by Vadim Ksendzov;</p>
