--- a/ua.html
+++ b/ua.html
@@ -72,14 +72,12 @@
 
             <div class="child_left">
                 <h2> Додаткова інформація </h2>
-                <p>Мене цікавлять IT сфера та веб-технології.</p>
-                <p>Я працьовита людина. Постійно читаю фахову літературу, дивлюся навчальні відео та проходжу
-                    онлайн-курси. Також я цікавлюсь музикою, літературою та іграми. Я постійно вивчаю щось нове та
-                    вдосконалюю свої навички.
+                <p>Я QA інженер з більше ніж річним досвідом, Я захоплююсь ІТ, веб- та мобільними технологіями. </p>
+                <p>Я працьовита людина. Постійно вчусь чомусь новому,вдосконалюю свої навички та використовувати їх на
+                    практиці.
                 </p>
-                <p>Я маю намір розвиватися у сфері забезпечення якості та сподіваюсь, що мій досвід, навички та знання
-                    будуть корисними для вашої компанії. </p>
-                <p>Моя мета – отримати посаду в компанії, де я можу рости та розвиватися як спеціаліст.
+                <p> Вірю, що мій досвід у забезпеченні якості зможе принести користь вашій компанії. </p>
+                <p>Моя мета – отримати посаду в компанії, де я можу продовжити свій профсійний розвиток.
                 </p>
                 <hr>
                 <h2>ОСВІТА</h2>
