--- a/ua.html
+++ b/ua.html
@@ -60,9 +60,9 @@
                     <li>Теорія тестування;</li>
                     <li>Check-lists, test cases, test suite, bug reports;</li>
                     <li>HTML, CSS, Git, GitHub, Linux bash, SQL;</li>
-                    <li><b>Test Management Systems:</b> - Qase;</li>
+                    <li><b>Test Management Systems:</b> - Qase, Testomat;</li>
                     <li><b>Bug Tracking Systems:</b>- Jira, Notion;</li>
-                    <li><b>OS:</b> - Windows, Android, linux;</li>
+                    <li><b>OS:</b> - Windows, Android, linux, Mac, IOS;</li>
                     <li><b>API Testing Tools:</b> - Postman, Swagger;</li>
                     <li><b>Tools:</b> - Devtools, VS code;</li>
                     <li><b>English Proficiency:</b> Intermediate;</li>
